<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="calendar">Календар</string>
    <string name="app_name">Диета на Скарсдейл</string>
    <string name="current_month_placeholder">Януари 1970</string>
    <string name="previous_month_placeholder">&lt;&lt;</string>
    <string name="next_month_placeholder">&gt;&gt;</string>
    <string name="breakfast">Закуска</string>
    <string name="lunch">Обяд</string>
    <string name="dinner">Вечеря</string>

    <string-array name="days_array">
        <item>П</item>
        <item>В</item>
        <item>С</item>
        <item>Ч</item>
        <item>П</item>
        <item>С</item>
        <item>Н</item>
    </string-array>
    <string-array name="lunch_array">
        <item name="day-1">\t&#8226; подбрано студено нетлъсто месо (по избор – пилешко, пуешко, език, крехко говеждо);\n\t
&#8226; домати, нарязани, печени или задушени;\n\t
&#8226; кафе, чай, газирана вода;</item>
        <item name="day-2">\t&#8226; плодова салата, всякаква комбинация от плодове, колкото искате;</item>
        <item name="day-3">\t&#8226; салата от риба тон или сьомга (с отцедена мазнина) с лимон или оцет;\n
\t&#8226; грейпфурт, пъпеш или сезонен плод;\n
\t&#8226; кафе или чай;</item>
        <item name="day-4">\t&#8226; 2 яйца приготвени по желание, но без мазнина;\n
\t&#8226; нискомаслено прясно сирене/извара;\n
\t&#8226; тиквички или зелен фасул или домати, нарязани и задушени;\n
\t&#8226; 1 филия протеинов или пълнозърнест хляб, препечена;\n
\t&#8226; чай или кафе;</item>
        <item name="day-5">\t&#8226; сирене (нискомаслено), различни видове, нарязано на филийки;\n
\t&#8226; спанак;\n
\t&#8226; 1 филия препечен протеинов или пълнозърнест хляб;</item>
        <item name="day-6">\t&#8226; плодова салата;\n
\t&#8226; кафе или чай;</item>
        <item name="day-7">\t&#8226; студено или топло пуешко или пилешко месо;\n
\t&#8226; домати, моркови, варено зеле, броколи или карфиол;\n
\t&#8226; грейпфурт или сезонен плод;\n
\t&#8226; кафе или чай;</item>
    </string-array>
    <string-array name="dinner_array">
        <item name="day-1">\t&#8226; риба или раци, скариди;\n
\t&#8226; комбинирана салата ( от всякакви зеленчуци по желание);\n
\t&#8226; 1 филия пълнозърнест или протеинов хляб, препечена;\n
\t&#8226; грейпфурт или плодове според сезона;</item>
        <item name="day-2">\t&#8226; голямо кюфте от говеждо месо;\n
\t&#8226; домати, маруля целина, маслини, брюкселско зеле, краставица;</item>
        <item name="day-3">\t&#8226; печено агнешко, нарязано от филийки с отстранена тлъстина;\n
\t&#8226; салата от маруля, домати, краставица, целина</item>
        <item name="day-4">\t&#8226; пилешко, печено на грил, скара или фурна ( с отстранена кожа или мазнина);\n
\t&#8226; голяма порция спанак, зелени чушки или зелен фасул;</item>
        <item name="day-5">\t&#8226; риба или раци, скариди;\n
\t&#8226; комбинирана салата от всякакви зеленчуци по желание;\n
\t&#8226; 1 филия препечен протеинов или пълнозърнест хляб;</item>
        <item name="day-6">\t&#8226; печено пуешко или пилешко;\n
\t&#8226; салата от домати и маруля;\n
\t&#8226; грейпфурт или сезонен плод;</item>
        <item name="day-7">\t&#8226; голяма телешка пържола (с отстранени видими мазнини преди хранене);\n
\t&#8226; салата от маруля, краставица, целина, домати, брюкселско зеле;</item>
    </string-array>

    <string name="day_breakfast">\t&#8226; 1/2 грейпфурт (ако не разполагате – плодове според сезона);\n
\t&#8226; една филия препечена протеинов или пълнозърнест хляб, без да се намазва;\n
\t&#8226; кафе или чай без захар, сметана или мляко</string>
    <string name="missing_start_end_dates">Липсва информация за начало на диетата!</string>
    <string name="problem_handling_date_differences">Вашата диета все още не е започнала!</string>
    <string name="invalid_diet_day">Вашата диета вече е приключила!</string>
    <string name="lunch_replace">\t&#8226; 1/2 нискомаслено прясно сирене или извара смесено с 1 с.л. сметана;\n
\t&#8226; плодове, нарязани колкото желаете;\n
\t&#8226; 6 половинки орехови ядки или американски орехи цели или нарязани и смесени със сиренето или поръсени върху плодовете;\n
\t&#8226; кафе, чай газирана вода с малко лимон;</string>
    <string name="replace">\tAко желаете, можете да заместите някое от менютата за обяд от диетата „Скарсдейл” със следното меню:</string>
    <string name="replace_title">Заместващ обяд</string>
    <string name="day_one">Ден 1</string>
    <string name="day">Ден %1$s</string>
    <string name="rules">Правила</string>
    <string name="info">Информация</string>
    <string name="about">Автор</string>
    <string name="reset">Изчисти</string>
    <string name="info">Информация</string>
    <string name="about">За мен</string>
    <string name="info_text">Диетата е била разработена, за да може пациентите със сърдечносъдови 
    заболявания да се освободят от излишните си килограми с цел подобряване на общото си състояние. 
    Постепенно  диетата е придобила популярност, поради това че е приятна за вкуса, безопасна,
    засищаща и неусложнена. Тя дава резултат в разумно кратък период от време. И най-важното от
    всичко способства да се развие модел на правилни хранителни навици за цял живот, така че
    загубеното тегло да остане загубено.\n
    <a href="http://scardsdale.mihailvelikov.eu/about" target="_blank">Прочети повече http://scardsdale.mihailvelikov.eu/about</a></string>
    <string name="info_title">За диетата</string>
    <string name="info_doctor">Диетата „Скарсдейл” на д-р Хърман Тарноуър - програма за отслабване за цял живот</string>
    <string name="about_title">За програмиста</string>
    <string name="developed_title">Разработил:</string>
    <string name="me">Михаил Боянов Великов</string>
    <string name="position">Уеб програмист, програмист на мобилни приложения, програмист на облачни системи</string>
    <string name="email_title">Email:</string>
    <string name="about_text">Разработил:\n
Михаил Боянов Великов\n
Уеб програмист, програмист на мобилни приложения, програмист на облачни системи\n
Email: <a href="mailto:scarsdale@mihailvelikov.eu">scarsdale@mihailvelikov.eu</a>\n
Web site: <a href="http://mihailvelikov.eu" target="_blank">http://mihailvelikov.eu</a>
    </string>
    <string name="confirm_clear_preferences_title">Сигурни ли сте?</string>
    <string name="new_diet_start">Ще изберете нова дата за начало на Вашата диета</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="hello">Здравейте</string>
    <string name="tip">В бяло е отбелязан текущият ден, в розово са отбелязани всички дни от Вашата диета, а в зелено всички останали.</string>
    <string name="ok">Добре</string>
</resources>