<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:orientation="vertical" >
        <TextView 
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="6dp" 
            />
        <TextView 
            android:id="@+id/info_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_doctor"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            />
        <TextView 
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </LinearLayout>
</ScrollView>